Fix cross-origin deployment: normalize API URL and relax CORS
- api.ts: auto-append /api to VITE_API_URL if missing, add 120s timeout
- SecurityConfig: remove allowCredentials (no auth needed), support wildcard origins
- application-prod.yml: default CORS to * since app is public/stateless

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>